Enhance responsiveness of main slider and layout adjustments for mobile devices. Update CSS for background images and modify HTML structure for better mobile compatibility.

--- a/src/style.css
+++ b/src/style.css
@@ -133,6 +133,11 @@ body{
 }
 .main-slider{
   background-image: url('../MainSliderBG.svg');
+  @media screen and (max-width: 768px) {
+    background-image: url('../MainSliderMobileBG.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
 .button{
   display: flex;
